--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-session": "^1.14.2",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
-    "passport-oauth2": "^1.3.0",
+    "passport-smartthings": "^0.3.7",
     "serve-favicon": "~2.3.0"
   }
 }
